# johdatus_ohjelmointiin_tuntiesimerkit

./: .gitignore  README.md
20230124/andOr/: CMakeLists.txt  main.c
20230124/firstIf/: CMakeLists.txt  main.c
20230124/monthlyExpenses/: CMakeLists.txt  main.c
20230124/switchCase/: CMakeLists.txt  main.c
20230124/viikkotehtava1lessThanTen/: CMakeLists.txt  main.c
20230202/firstWhile/: main.c
20230202/viikkotehtavat3/: CMakeLists.txt  main.c
20230208/encoding/: CMakeLists.txt  main.c
20230208/firstFunction/: CMakeLists.txt  main.c
20230208/viikkotehtava4_1/: CMakeLists.txt  main.c
20230208/viikkotehtava4_2/: CMakeLists.txt  main.c
20230208/viikkotehtava4_3/: CMakeLists.txt  main.c
20230208/viikkotehtava4_4/: CMakeLists.txt  main.c
20230208/viikkotehtava4_5/: CMakeLists.txt  main.c
20230208/viikkotehtava4_6/: CMakeLists.txt  main.c
20230213/first/: CMakeLists.txt  main.c
20230216/firstExamples/: CMakeLists.txt  main.c
20230216/structs/: CMakeLists.txt  main.c
20230216/viikkotehtava4_7_stringFunction/: CMakeLists.txt  main.c
20230216/viikkotehtava4_8atoiAtof/: CMakeLists.txt  main.c
20230216/viikkotehtava5_1/: CMakeLists.txt  main.c
20230220/student/: CMakeLists.txt  main.c
20230223/6_1_Name/: CMakeLists.txt  main.c
20230223/6_2_Replace_Commas/: CMakeLists.txt  main.c
20230223/6_3_WordCount/: CMakeLists.txt  main.c
20230223/errorHandling/: CMakeLists.txt  main.c  myfunctions.h
20230223/readFile/: CMakeLists.txt  main.c
20230227/wordCount/: main.c
20230228/examples/: CMakeLists.txt  main.c  myFunctions.c  myFunctions.h
20230228/wordCount/: CMakeLists.txt  main.c
20230904/printf/: CMakeLists.txt
20230915/monthlyShopping/: CMakeLists.txt  main.c
20230918/firstWhile/: main.c
20240110/build-ekaOhjelma-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
20240110/build-helloWorld-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
20240110/build-helloWorld2-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: .ninja_deps  (+4 more)
20250902b/: CMakeLists.txt  main.c
20250904/lisatehtava1-1-viikkotehtavapisteet/: CMakeLists.txt  main.c
20250904/viikkotehtava1-3_kolmionAla/: CMakeLists.txt  main.c
20250926/viikkotehtava4-7_stringParameter/: CMakeLists.txt  main.c
20251008/viikkotehtatava6-2_korvaaPilkut/: CMakeLists.txt  main.c
20251008/viikkotehtava6-2_korvaaPilkut2/: CMakeLists.txt  main.c
20251008/vkotehtava6-1_tallennaNimiTiedostoon/: CMakeLists.txt  main.c
20251008/vkotehtava6-1_tallennaNimiTiedostoon2/: CMakeLists.txt  main.c
eka/: CMakeLists.txt  main.c
lokaali/: CMakeLists.txt  main.c
viikkotehtava1-3-kolmio/: CMakeLists.txt  main.c
vkotehtava1-lampotila/: CMakeLists.txt  main.c
(+495 files in other folders)
